# music-and-economy

./: .gitignore  README.md  audio_features.ipynb  base_analysis.ipynb  billboard_analysis.ipynb  billboard_analysis_1960.ipynb  complete_analysis.ipynb  misery.ipynb  pyproject.toml  trend_analysis.ipynb
economic_indicators/: misery_index.csv  weekely_economic_index.csv  wei.csv
experiments/: billboard_analysis.ipynb  music_economic_index.ipynb  music_sentiment.ipynb  period_split_analysis.ipynb  period_split_analysis2.ipynb  trend_analysis.ipynb
music_market/: music_market_share.ipynb  music_revenue_chart.csv
spotify_data/: charts_aggregation.py  charts_scraping.py  spotify_get_data.py  test.py  test2.ipynb  us_audio_features.pkl
