[tool.poetry]
name = "grad-thesis"
version = "0.1.0"
description = ""
authors = ["zoohta <koh.0430.ta@gmail.com>"]
readme = "README.md"
packages = [{include = "grad_thesis"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.3"
statsmodels = "^0.13.5"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
